edit root path of the COPYPROJECT

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.nothapp.appfuniture"
+        applicationId "com.noth.nothapp"
         minSdk 21
         targetSdk 32
         versionCode 1
